remove unused add-opens for reflection