@@ -919,7 +919,6 @@
                 --add-opens java.base/java.lang=ALL-UNNAMED
                 --add-opens java.base/java.util=ALL-UNNAMED
                 --add-opens java.base/java.io=ALL-UNNAMED
-                --add-opens java.base/java.lang.reflect=ALL-UNNAMED
             </argLine>
             <includes>
               <!-- XWiki rule is to put test in *Test classes -->
